--- a/assignment/stylesheet.css
+++ b/assignment/stylesheet.css
@@ -1,3 +1,10 @@
-h1 {
-  background-color: black;
+
+header {
+  background-color: #00008B;
+  color: white;
+  text-align: center;
+}
+
+main {
+  background-color: #D3D3D3;
 }
