--- a/assignment/stylesheet.css
+++ b/assignment/stylesheet.css
@@ -8,3 +8,10 @@ header {
 main {
   background-color: #D3D3D3;
 }
+
+body {
+  margin: 0px;
+  padding: 1em;
+  background-image: url("record.png");
+  background-repeat: repeat;
+}
