Replaced divs with different section labels after receiving feedback

--- a/assignment/stylesheet.css
+++ b/assignment/stylesheet.css
@@ -1,11 +1,11 @@
 
-.header {
+header {
   background-color: #00008B;
   color: white;
   text-align: center;
 }
 
-.main {
+main {
   background-color: #D3D3D3;
 }
 
